# Minecraft

./: CMakeLists.txt  README.md  build_win.bat  main.c
.github/workflows/: build.yml
src/: FrustumCulling.h  Lightning.h  PlayerInput.h  RenderPlayer.h  RenderSun.h  RenderWorld.h  Texture.h  Transform.h
src/Implementation/: FrustumCulling.c  Lightning.c  PlayerInput.c  RenderPlayer.c  RenderSun.c  RenderWorld.c  Texture.c  Transform.c
